--- a/MyCV/WebContent/css/cv.css
+++ b/MyCV/WebContent/css/cv.css
@@ -140,3 +140,10 @@ ul li {
     background-color: #333;
     color: #ddd;
 }
+
+.header {
+	background-color: #333;
+	color: white;
+	text-align: center;
+	padding: 5px;
+}
